fix overflow issues by forcing 100% width

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,9 +4,8 @@
   top: 50%;
   left: 50%;
   z-index: -1;
-  min-width: 100%;
   min-height: 100%;
-  width: auto;
+  width: 100%;
   height: auto;
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
